--- a/src/components/card/cta.one.html
+++ b/src/components/card/cta.one.html
@@ -1,5 +1,3 @@
-<!-- @format -->
-
 <!-- cta:one -->
 <section>
   <div class="bg-white">
@@ -7,20 +5,19 @@
       <div
         class="bg-elite-200 relative isolate overflow-hidden px-6 pt-16 shadow-2xl sm:rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0">
         <div class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-32 lg:text-left">
-          <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl"
-            >Spring into.<br />Training for Life.</h2
-          >
-          <p class="mt-6 text-lg leading-8 text-gray-300"
-            >Ac euismod vel sit maecenas id pellentesque eu sed consectetur. Malesuada adipiscing
-            sagittis vel nulla.</p
-          >
+          <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Spring into.<br />Training for Life.</h2>
+          <p class="mt-6 text-lg leading-8 text-gray-300">
+            Ac euismod vel sit maecenas id pellentesque eu sed consectetur. Malesuada adipiscing sagittis vel nulla.
+          </p>
           <div class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start">
             <a
               href="#"
               class="rounded-xl bg-white px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
               >Get started</a
             >
-            <a href="#" class="text-sm font-semibold leading-6 text-white"
+            <a
+              href="#"
+              class="text-sm font-semibold leading-6 text-white"
               >Learn more <span aria-hidden="true">→</span></a
             >
           </div>
