--- a/src/css/features.css
+++ b/src/css/features.css
@@ -1,17 +1,23 @@
-/* Styles for the section */
+/* STYLES FOR DYNAMIC FEATURES SECTION */
+.d3-undefined {
+  grid-area: 6/1/7/2 !important;
+  position: relative !important;
+  width: 100% !important;
+}
+
 #dynamic-features.section-background {
   background-color: #231f1f;
-  padding-top: 10px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 /* Container styles */
 .section3container {
-  margin: auto;
-  width: 100%;
+  margin: auto !important;
+  width: 100% !important;
   align-items: center;
   justify-content: center;
-  max-width: 1140px; /* equivalent to max-w-7xl */
+  max-width: 1140px !important; /* equivalent to max-w-7xl */
   padding-left: 20px; /* equivalent to px-5 */
   padding-right: 20px; /* equivalent to px-5 */
   padding-top: 24px;
@@ -64,17 +70,21 @@
     align-items: center;
     justify-content: center;
     display: inline-flex; /* Switch to inline-flex layout for larger screens */
-    max-width: 1140px; /* equivalent to lg:max-w-7xl */
+    max-width: 1140px !important; /* equivalent to lg:max-w-7xl */
   }
 }
 
 /* Title styles */
 .section3title {
-  max-width: 640px; /* equivalent to max-w-2xl */
-  font-size: 40px; /* equivalent to text-5xl */
-  font-weight: bold;
-  color: white;
-  letter-spacing: -0.05em; /* approximation of tracking-tight */
+  max-width: 640px !important;
+}
+
+.font_title_2 {
+  font: var(--font_2) !important;
+  font-size: 38px !important;
+  line-height: auto !important;
+  color: #ffffff !important;
+  letter-spacing: -0.05em !important;
 }
 
 /* Subtitle styles */
@@ -97,19 +107,19 @@
 /* List styles */
 .section3list {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 16px; /* equivalent to gap-4 */
-  list-style-type: none;
+  grid-template-columns: repeat(2, 1fr) !important;
+  gap: 16px !important;
+  list-style-type: none !important;
 }
 
 @media (min-width: 768px) {
   .section3list {
-    grid-template-columns: repeat(3, 1fr); /* equivalent to md:grid-cols-3 */
+    grid-template-columns: repeat(3, 1fr) !important;
   }
 }
 
 @media (min-width: 1024px) {
   .section3list {
-    gap: 48px; /* equivalent to lg:gap-12 */
+    gap: 48px !important;
   }
 }
