--- a/src/components/socials/socials.html
+++ b/src/components/socials/socials.html
@@ -106,15 +106,14 @@
 
             <!-- Social Links -->
             <div
-              class="comp-kzhbpydl gydiew"
-              id="comp-kzhbpydl icon-container"
+              class="icon-container"
+              id="comp-kzhbpydl"
               aria-disabled="false">
               <!-- Instagram Icon Link -->
               <a
                 data-testid="linkElement"
                 target="_blank"
                 rel="noopener"
-                class="TFOeq0 zKbzSQ"
                 aria-disabled="false"
                 href="<?php echo esc_url($instagram_url); ?>">
                 <span>
@@ -136,7 +135,6 @@
                 data-testid="linkElement"
                 target="_blank"
                 rel="noopener"
-                class="TFOeq0 zKbzSQ"
                 aria-disabled="false"
                 href="<?php echo esc_url($facebook_url); ?>">
                 <span>
